@startuml
!include ../../../../../../../diagrams_main_concepts/VanskarnerStyle.puml

/'Specification'/
package localdata as "com.vanskarner.localdata"{
    interface MovieDao<<interface>>
    class MovieEntity<<(D,orange)Data Structure>>
    class MovieLocalRxRepository
    class MovieLocalDataMapper
}
package entities as "com.vanskarner.entities" {
    entity MovieBO
}
package usecases as "com.vanskarner.usecases" {
    interface MovieLocalRepository<<interface>>
}

/'Relations'/
MovieLocalRxRepository --> MovieDao: -dao
MovieDao ..> MovieEntity
MovieLocalRxRepository ..> MovieLocalDataMapper
MovieLocalDataMapper ..> MovieEntity
MovieLocalDataMapper ..> MovieBO: <<use>>
MovieLocalRepository .> MovieBO: <<use>>
MovieLocalRepository <|.. MovieLocalRxRepository

/'Visualization'/
hide members
@enduml